fix(packaging): install vue, vue-loader and other deps

--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "url": "https://github.com/soramitsukhmer/soramitsu-vuetify-plugin/issues"
   },
   "homepage": "https://github.com/soramitsukhmer/soramitsu-vuetify-plugin#readme",
-  "dependencies": {},
+  "dependencies": {
+    "vue": "^2.6.11"
+  },
   "devDependencies": {
     "@babel/core": "^7.10.1",
     "@storybook/addon-actions": "^5.3.19",
@@ -27,6 +29,8 @@
     "@storybook/addons": "^5.3.19",
     "@storybook/vue": "^5.3.19",
     "babel-loader": "^8.1.0",
-    "babel-preset-vue": "^2.0.2"
+    "babel-preset-vue": "^2.0.2",
+    "vue-loader": "^15.9.2",
+    "vue-template-compiler": "^2.6.11"
   }
 }
