--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "vue-cli-service serve example/main.js",
+    "serve": "cd example; vue-cli-service serve",
     "build:dev": "vue-cli-service build --watch --mode development --target lib src/main.js",
     "build": "vue-cli-service build --target lib src/main.js",
     "test:unit": "vue-cli-service test:unit",
